# khyber

./: CMakeLists.txt  LICENSE.TXT  Makefile  README.md
benchmarks/: BenchmarkApp.hpp  CMakeLists.txt
benchmarks/basic_arithmetic/: Basic_Arithmetic.cpp  CMakeLists.txt  Serial.cpp  Serial.hpp
benchmarks/sqrt/: CMakeLists.txt  Makefile  Sqrt.cpp  build.sh
examples/: CMakeLists.txt
examples/cpuid/: CMakeLists.txt  Cpuid.cpp  Makefile
khyber.xcodeproj/: project.pbxproj
khyber.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
khyber.xcodeproj/project.xcworkspace/xcuserdata/ihamid.xcuserdatad/: UserInterfaceState.xcuserstate
khyber.xcodeproj/xcuserdata/ihamid.xcuserdatad/xcschemes/: khyber.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt
src/lib/: Array.cpp  Array.hpp  Avx2Internals.cpp  Avx2Internals.hpp  AvxInternals.cpp  AvxInternals.hpp  CMakeLists.txt  Enable.hpp  Makefile  ProcessorCaps.hpp  SimdAllocator.hpp  SimdContainer.hpp  Types.hpp  doxconfig.ini  mainpage.dox
src/lib/arch/avx/: AvxInternals.cpp
src/lib/arch/avx2/: Avx2Internals.cpp
src/unittest/: ArrayTest.cpp  Avx2InternalsTest.cpp  AvxInternalsTest.cpp  KhyberTest.cpp  Makefile  SimdContainerTest.cpp  build.sh
